[tool.poetry]
name = "quart-injector"
version = "0.0.1-b1"
description = ""
authors = ["Daniel Knell <contact@danielknell.co.uk>"]
readme = "README.md"
packages = [{include = "quart_injector", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
injector = ">= 0.19.0, < 1.0.0"
quart =  ">= 0.17.0, < 1.0.0"

[tool.poetry.group.dev.dependencies]
shed = ">=0.9.5,<2023.7.0"
pylint = "^2.13.8"
mypy = ">=0.950,<1.5"
pytest = "^7.1.2"
pytest-asyncio = ">=0.18.3,<0.22.0"
pytest-cov = "^4.1.0"
docformatter = "^1.4"
pytest-pylint = ">=0.18,<0.20"
pytest-mypy = ">=0.9.1,<0.11.0"
pydocstyle = "^6.1.1"
pytest-pydocstyle = "^2.3.0"
pyenchant = "^3.2.2"

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.17.2,<0.19.0"
sphinx-artisan-theme = "^0.0.1-beta.2"
autodocsumm = "^0.2.8"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-spelling = ">=7.3.3,<9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
known_localfolder = ['tests']

[tool.pylint.master]
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.mccabe",
    "pylint.extensions.docstyle",
    "pylint.extensions.check_elif",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.docparams",
    "pylint.extensions.empty_comment",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "to"]

[tool.pylint.messages_control]
disable = [
    "docstring-first-line-empty",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.spelling]
spelling-dict = "en_GB"
spelling-private-dict-file = ".dictionary"

[tool.pylint.similarities]
ignore-signatures = true
ignore-imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "tests"
filterwarnings = [
    "error",
    "ignore::pytest.PytestRemovedIn8Warning",
    "ignore::DeprecationWarning:pylint.*"
]

[tool.pylint.parameter_documentation]
default-docstring-type = "sphinx"

[tool.mypy]
strict = true

[tool.pydocstyle]
add-ignore = [
    "D102",
    "D105",
    "D107",
    "D200",
    "D212",
]